feat(Elasticsearch): add problem into ES when it was created, search problem